# snl-compiler

./: .gitignore  AGENTS.MD  CMakeLists.txt  README.md
slides/: main.typ
src/: ast.cpp  ast.h  diagnostic.cpp  diagnostic.h  lexer.cpp  lexer.h  ll1_parser.cpp  ll1_parser.h  main.cpp  mips.cpp  mips.h  parser.cpp  parser.h  semantic.cpp  semantic.h  symbol_table.cpp  symbol_table.h  token.cpp  token.h  type.cpp  type.h
tests/lexical_errors/: invalid_char.snl  invalid_char_const.snl  lone_colon.snl  unclosed_comment.snl
tests/mips/: basic_write.snl  char_write.snl  if_else.snl  local_shadow.snl  nested_nonlocal.snl  optimized_codegen.snl  read_add.snl  record_array_var_param.snl  recursive_sum.snl  value_array_param.snl  while_sum.snl
tests/semantic_errors/: array_errors.snl  assignment_mismatch.snl  call_errors.snl  comparison_mismatch.snl  duplicate_definition.snl  invalid_type_name.snl  record_errors.snl  undeclared_identifier.snl
tests/syntax_errors/: bad_statement.snl  mismatched_paren.snl  missing_end.snl  missing_semi.snl
tests/valid/: basic_tokens.snl  full_syntax.snl  semantic_nested_ok.snl  semantic_ok.snl
web/: server.mjs
web/public/: app.js  index.html  styles.css
初始文档/: SNL Compiler Implementation.docx  SNL_Compiler_Info_Extracted.md  SNL_Compiler_Missing_Items_Supplement.md  编译原理实验.ppt
文档/: MIPS_栈帧与调用约定.md  SNL_LL1和优化介绍.md  SNL_LL1语法分析与编译优化详解.md  SNL_PPT_语法产生式摘要.md  SNL_编译原理项目总体规划.md
